place on same position fix